--- a/css/style.css
+++ b/css/style.css
@@ -780,6 +780,7 @@ button:hover {
   align-self: stretch;
   -webkit-backdrop-filter: blur(4px);
   backdrop-filter: blur(4px);
+  width: 100% !important;
 }
 .contacts-section .contacts-section__content__form .form__block input::placeholder {
   font-size: 14px;
@@ -805,6 +806,7 @@ button:hover {
   -webkit-backdrop-filter: blur(4px);
   backdrop-filter: blur(4px);
   margin: 0;
+  width: 100% !important;
 }
 .contacts-section .contacts-section__content__form .form__block textarea::placeholder {
   font-size: 14px;
