--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@ body {
   margin: 0;
   box-sizing: border-box;
   font-family: "Teko", sans-serif;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 html.lock,
